# instant_messages_microservice

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/: main.py  smoke_rich.json
config/: app.yaml.example
src/: __init__.py  main.py
src/api/: __init__.py  deps.py
src/api/v1/: __init__.py  router.py
src/api/v1/endpoints/: __init__.py  admin.py  health.py  meta.py  teams.py
src/core/: __init__.py  config.py  exceptions.py  handlers.py  logging.py  middleware.py
src/schemas/: __init__.py  admin.py  common.py  enums.py  teams.py
src/services/: __init__.py  teams.py
tests/: conftest.py  test_api_health.py  test_api_teams.py  test_card_builder.py  test_config_reload.py  test_masking.py  test_middleware.py  test_retry_mechanics.py  test_webhook_resolution.py
